--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 </head>
 <body>
   <div id="popur-bg">
-    <div id="popur-content"
+    <div id="popup-content">
+      <div id="popup-close">
+        <!-- icon close -->
+        </div>
+        <img id="popup-img" src="#" alt="" />
+    </div>
+  </div>
+
+  <div id="grid">
+    
   </div>
   <script src="app.js"></script>
 </body>
