--- a/index.html
+++ b/index.html
@@ -11,15 +11,33 @@
   <div id="popur-bg">
     <div id="popup-content">
       <div id="popup-close">
-        <!-- icon close -->
+        <ion-icon name="close-circle"></ion-icon>
         </div>
         <img id="popup-img" src="#" alt="" />
     </div>
   </div>
 
   <div id="grid">
-    
+        <div class="grid-item" id="nature-1"><img src="" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-2"><img src="" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-3"><img src="" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-4"><img src="" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-5"><img src="" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-6"><img src="" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-7"><img src="" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-8"><img src="" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-9"><img src="" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-10"><img src="" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-11"><img src="" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-12"><img src="" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-13"><img src="" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-14"><img src="" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-15"><img src="" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-16"><img src="" alt="" class="grid-img"></div>
+    </div>
   </div>
   <script src="app.js"></script>
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
