--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
   </div>
 
   <div id="grid">
-        <div class="grid-item" id="nature-1"><img src="" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-2"><img src="" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-3"><img src="" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-4"><img src="" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-5"><img src="" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-6"><img src="" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-7"><img src="" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-8"><img src="" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-9"><img src="" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-10"><img src="" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-11"><img src="" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-12"><img src="" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-13"><img src="" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-14"><img src="" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-15"><img src="" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-16"><img src="" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-1"><img src="img/1.jpg" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-2"><img src="img/2.jpg" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-3"><img src="img/3.jpg" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-4"><img src="img/4.jpg" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-5"><img src="img/5.jpg" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-6"><img src="img/6.jpg" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-7"><img src="img/7.jpg" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-8"><img src="img/8.jpg" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-9"><img src="img/9.jpg" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-10"><img src="img/10.jpg" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-11"><img src="img/11.jpg" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-12"><img src="img/12.jpg" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-13"><img src="img/13.jpg" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-14"><img src="img/14.jpg" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-15"><img src="img/15.jpg" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-16"><img src="img/16.jpg" alt="" class="grid-img"></div>
     </div>
   </div>
   <script src="app.js"></script>
