добавлены еще картинки
добавлены кол-ва столбцов по горизонтали и вертикали для каждой отдельной картинки

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
         <div class="grid-item" id="nature-14"><img src="img/14.jpg" alt="" class="grid-img"></div>
         <div class="grid-item" id="nature-15"><img src="img/15.jpg" alt="" class="grid-img"></div>
         <div class="grid-item" id="nature-16"><img src="img/16.jpg" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-17"><img src="img/17.jpg" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-18"><img src="img/18.jpg" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-19"><img src="img/19.jpg" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-20"><img src="img/20.jpg" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-21"><img src="img/21.jpg" alt="" class="grid-img"></div>
+        <div class="grid-item" id="nature-22"><img src="img/22.jpg" alt="" class="grid-img"></div>
     </div>
   </div>
   <script src="app.js"></script>
