--- a/index.html
+++ b/index.html
@@ -1,49 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./style.css" />
   <title>Document</title>
-  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <div id="popur-bg">
+  <div id="popup-bg">
     <div id="popup-content">
       <div id="popup-close">
         <ion-icon name="close-circle"></ion-icon>
-        </div>
-        <img id="popup-img" src="#" alt="" />
+      </div>
+      <img id="popup-img" src="#" alt="" />
+    </div>
+  </div>
+  <div id="grid">
+    <div class="grid-item" id="/nature-1">
+      <img src="nature-1.jpg" alt="" class="grid-img" />
+    </div>
+    <div class="grid-item" id="/nature-2">
+      <img src="nature-2.jpg" alt="" class="grid-img" />
+    </div>
+    <div class="grid-item" id="nature-3">
+      <img src="nature-3.jpg" alt="" class="grid-img" />
+    </div>
+    <div class="grid-item" id="nature-4">
+      <img src="nature-4.jpg" alt="" class="grid-img" />
+    </div>
+    <div class="grid-item" id="nature-5">
+      <img src="nature-5.jpg" alt="" class="grid-img" />
+    </div>
+    <div class="grid-item" id="nature-6">
+      <img src="nature-6.jpg" alt="" class="grid-img" />
+    </div>
+    <div class="grid-item" id="nature-7">
+      <img src="nature-7.jpg" alt="" class="grid-img" />
+    </div>
+    <div class="grid-item" id="nature-8">
+      <img src="nature-8.jpg" alt="" class="grid-img" />
+    </div>
+    <div class="grid-item" id="nature-9">
+      <img src="nature-9.jpg" alt="" class="grid-img" />
+    </div>
+    <div class="grid-item" id="nature-10">
+      <img src="nature-10.jpg" alt="" class="grid-img" />
+    </div>
+    <div class="grid-item" id="nature-11">
+      <img src="nature-11.jpg" alt="" class="grid-img" />
+    </div>
+    <div class="grid-item" id="nature-12">
+      <img src="nature-12.jpg" alt="" class="grid-img" />
+    </div>
+    <div class="grid-item" id="nature-13">
+      <img src="nature-13.jpg" alt="" class="grid-img" />
+    </div>
+    <div class="grid-item" id="nature-14">
+      <img src="nature-14.jpg" alt="" class="grid-img" />
+    </div>
+    <div class="grid-item" id="nature-15">
+      <img src="nature-15.jpg" alt="" class="grid-img" />
+    </div>
+    <div class="grid-item" id="nature-16">
+      <img src="nature-16.jpg" alt="" class="grid-img" />
     </div>
   </div>
 
-  <div id="grid">
-        <div class="grid-item" id="nature-1"><img src="img/1.jpg" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-2"><img src="img/2.jpg" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-3"><img src="img/3.jpg" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-4"><img src="img/4.jpg" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-5"><img src="img/5.jpg" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-6"><img src="img/6.jpg" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-7"><img src="img/7.jpg" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-8"><img src="img/8.jpg" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-9"><img src="img/9.jpg" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-10"><img src="img/10.jpg" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-11"><img src="img/11.jpg" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-12"><img src="img/12.jpg" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-13"><img src="img/13.jpg" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-14"><img src="img/14.jpg" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-15"><img src="img/15.jpg" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-16"><img src="img/16.jpg" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-17"><img src="img/17.jpg" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-18"><img src="img/18.jpg" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-19"><img src="img/19.jpg" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-20"><img src="img/20.jpg" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-21"><img src="img/21.jpg" alt="" class="grid-img"></div>
-        <div class="grid-item" id="nature-22"><img src="img/22.jpg" alt="" class="grid-img"></div>
-    </div>
-  </div>
-  <script src="app.js"></script>
+  <script src="./app.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
+
 </html>
