--- a/index.html
+++ b/index.html
@@ -19,53 +19,53 @@
     </div>
   </div>
   <div id="grid">
-    <div class="grid-item" id="/nature-1">
-      <img src="nature-1.jpg" alt="" class="grid-img" />
+    <div class="grid-item" id="nature-1">
+      <img src="img/nature-1.jpg" alt="" class="grid-img" />
     </div>
-    <div class="grid-item" id="/nature-2">
-      <img src="nature-2.jpg" alt="" class="grid-img" />
+    <div class="grid-item" id="nature-2">
+      <img src="img/nature-2.jpg" alt="" class="grid-img" />
     </div>
     <div class="grid-item" id="nature-3">
-      <img src="nature-3.jpg" alt="" class="grid-img" />
+      <img src="img/nature-3.jpg" alt="" class="grid-img" />
     </div>
     <div class="grid-item" id="nature-4">
-      <img src="nature-4.jpg" alt="" class="grid-img" />
+      <img src="img/nature-4.jpg" alt="" class="grid-img" />
     </div>
     <div class="grid-item" id="nature-5">
-      <img src="nature-5.jpg" alt="" class="grid-img" />
+      <img src="img/nature-5.jpg" alt="" class="grid-img" />
     </div>
     <div class="grid-item" id="nature-6">
-      <img src="nature-6.jpg" alt="" class="grid-img" />
+      <img src="img/nature-6.jpg" alt="" class="grid-img" />
     </div>
     <div class="grid-item" id="nature-7">
-      <img src="nature-7.jpg" alt="" class="grid-img" />
+      <img src="img/nature-7.jpg" alt="" class="grid-img" />
     </div>
     <div class="grid-item" id="nature-8">
-      <img src="nature-8.jpg" alt="" class="grid-img" />
+      <img src="img/nature-8.jpg" alt="" class="grid-img" />
     </div>
     <div class="grid-item" id="nature-9">
-      <img src="nature-9.jpg" alt="" class="grid-img" />
+      <img src="img/nature-9.jpg" alt="" class="grid-img" />
     </div>
     <div class="grid-item" id="nature-10">
-      <img src="nature-10.jpg" alt="" class="grid-img" />
+      <img src="img/nature-10.jpg" alt="" class="grid-img" />
     </div>
     <div class="grid-item" id="nature-11">
-      <img src="nature-11.jpg" alt="" class="grid-img" />
+      <img src="img/nature-11.jpg" alt="" class="grid-img" />
     </div>
     <div class="grid-item" id="nature-12">
-      <img src="nature-12.jpg" alt="" class="grid-img" />
+      <img src="img/nature-12.jpg" alt="" class="grid-img" />
     </div>
     <div class="grid-item" id="nature-13">
-      <img src="nature-13.jpg" alt="" class="grid-img" />
+      <img src="img/nature-13.jpg" alt="" class="grid-img" />
     </div>
     <div class="grid-item" id="nature-14">
-      <img src="nature-14.jpg" alt="" class="grid-img" />
+      <img src="img/nature-14.jpg" alt="" class="grid-img" />
     </div>
     <div class="grid-item" id="nature-15">
-      <img src="nature-15.jpg" alt="" class="grid-img" />
+      <img src="img/nature-15.jpg" alt="" class="grid-img" />
     </div>
     <div class="grid-item" id="nature-16">
-      <img src="nature-16.jpg" alt="" class="grid-img" />
+      <img src="img/nature-16.jpg" alt="" class="grid-img" />
     </div>
   </div>
 
